[tool.poetry]
name = "ipasnhistory"
version = "2.1"
description = "IP ASN History helps to figure out which prefix and ASN is announcing a specific IP."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"

caida_downloader = "bin.caida_dl:main"
caida_loader = "bin.caida_loader:main"
ripe_downloader = "bin.ripe_dl:main"
ripe_loader = "bin.ripe_loader:main"
lookup_manager = "bin.lookup_manager:main"
lookup = "bin.lookup:main"


[tool.poetry.dependencies]
python = "^3.8.1"
redis = {version = "^5.1.0", extras = ["hiredis"]}
flask-restx = "^1.3.0"
gunicorn = "^23.0.0"
pytricia = {git = "https://github.com/D4-project/pytricia.git"}
aiohttp = "^3.10.8"
beautifulsoup4 = "^4.12.3"
python-dateutil = "^2.9.0.post0"
bgpdumpy = {version = "^1.1.4", optional = true}
pyipasnhistory = "^2.1.2"
setuptools = "^75.1.0"

[tool.poetry.dev-dependencies]
ipython = [
    {version = "<8.13.0", python = "<3.9"},
    {version = "^8.18.0", python = ">=3.9"},
    {version = "^8.19.0", python = ">=3.10"}
]
mypy = "^1.11.2"
types-setuptools = "^75.1.0.20240917"
types-redis = "^4.6.0.20240903"
types-requests = "^2.32.0.20240914"
types-python-dateutil = "^2.9.0.20240906"

[tool.poetry.extras]
ripe = ["bgpdumpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
