[tool.poetry]
name = "ipasnhistory"
version = "2.1"
description = "IP ASN History helps to figure out which prefix and ASN is announcing a specific IP."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"

caida_downloader = "bin.caida_dl:main"
caida_loader = "bin.caida_loader:main"
ripe_downloader = "bin.ripe_dl:main"
ripe_loader = "bin.ripe_loader:main"
lookup_manager = "bin.lookup_manager:main"
lookup = "bin.lookup:main"


[tool.poetry.dependencies]
python = "^3.9.2"
redis = {version = "^5.1.0,<6.0", extras = ["hiredis"]}
flask-restx = "^1.3.0"
gunicorn = "^23.0.0"
pytricia = {git = "https://github.com/D4-project/pytricia.git"}
aiohttp = "^3.11.18"
beautifulsoup4 = "^4.13.4"
python-dateutil = "^2.9.0.post0"
bgpdumpy = {version = "^1.1.4", optional = true}
pyipasnhistory = "^2.1.4"
setuptools = "^80.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
types-setuptools = "^80.7.0.20250516"
types-redis = "^4.6.0.20241004"
types-requests = "^2.32.0.20250515"
types-python-dateutil = "^2.9.0.20250516"

[tool.poetry.extras]
ripe = ["bgpdumpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
